<resources>
    <string name="app_name">Dailiv</string>

    <string name="facebook_app_id">250311455330726</string>
    <string name="fb_login_protocol_scheme">fb250311455330726</string>
    <string name="google_client_id">1043756722761-o46a5ka5aqviddt9lr76gaubl7a3u7of.apps.googleusercontent.com</string>

    <string name="onboard_1_title">Nikmat Kesegaran Makanan!</string>
    <string name="onboard_1_desc">Dailiv merupakan partner memasak yang memberikan layanan pembelian bahan makanan serta ide-ide dalam memasak</string>
    <string name="onboard_2_title">Harga Terbaru Pasar</string>
    <string name="onboard_2_desc">Dapatkan beragam bahan makanan segar dan berkualitas yang langsung diambil pasar tradisional terdekat dengan lokasimu</string>
    <string name="onboard_3_title">Kreasikan Hobi Memasak!</string>
    <string name="onboard_3_desc">Dapatkan dan kreasikan resep masakan bersama teman-temanmu di Dailiv.\n Yuk, mari memasak!</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="or">Or</string>
    <string name="with_facebook">Log In With Facebook</string>
    <string name="with_google">Log In With Google</string>
    <string name="no_account">Don`t have an account?</string>
    <string name="register_here">Sign Me Up!</string>

    <string name="email_not_valid">email is not valid</string>
    <string name="password_empty">password is empty</string>

    <string name="new_account">New Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="sign_up">Register here</string>

    <string name="agree">By signing up, you agree with our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="already_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>

    <string name="dailiv">Dailiv</string>
    <string name="recipe">Recipe</string>
    <string name="store">Store</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>

    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="title_activity_maps">Map</string>

    <!--home-->
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>

    <string name="recipe_of_the_day">Recipe Of The Day</string>
    <string name="recipe_of_the_day_info">Cooking time: &lt;b>%smin&lt;/b> | Level: &lt;b>%s&lt;/b></string>

    <string name="popular_this_week">Popular This Week</string>
    <string name="see_all_recipes">See All Recipes ></string>
    <string name="looking_for_ingredient">Looking For Ingredients?</string>
    <string name="shop_now">Shop Now ></string>
    
    <string name="similar_products">Similar Products</string>
    
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="related_recipes">Related Recipes</string>
    <string name="see_recipe">See Recipe ></string>
    <string name="add_to_meal_planning">Add To Meal Planning</string>

    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="filter_by">Filter by</string>
    <string name="sort_by">Sort by</string>
    <string name="category">Category</string>
    <string name="price_range">Price Range</string>
    <string name="difficulty">Difficulty</string>
    <string name="duration">Duration</string>
    
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="coming_soon">coming soon</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="atm"> ATM</string>
    <string name="credit_card">Credit Card</string>
    <string name="cod_1">Pembayaran hanya dilakukan saat pengantar sudah mengantar barang yang dipesan</string>
    <string name="cod_2">Pengantar akan menghubungi anda dalam waktu dekat setelah tombol dibawah diklik</string>
    <string name="cod_3">Harap hubungi bagian support kami melalui halaman ini jika ada kesalahan dari pihak kami seperti:\n\t- Barang yang dibeli tidak sama dengan yang dipesan\n\t- Barang sudah tidak fresh</string>

    <string name="order_history">Order History</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>

    <string name="meal_planning">Meal Planning</string>

    <string name="log_out">Log Out</string>

    <string name="or_use_this_location">Or use this location</string>
    <string name="continue_location">Continue</string>

    <string name="review_thanks">Thanks For Trusting Us</string>
    <string name="review_rate">Rate Your Experience</string>
    <string name="review_feedback">Write your feedback</string>
    <string name="submit">Submit</string>
    <string name="please_give_rating">Silahkan berikan rating</string>

    <string name="add_to_cart">Add to cart</string>
    <string name="filter_by_price">Filter by price</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_duration">Filter by duration</string>
    <string name="filter_by_difficulty">Filter by difficulty</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>

    <string name="add_to_meal_plan">Add to meal plan</string>
    <string name="choose_your_cooking_date">Choose your cooking date</string>
    <string name="select_date">Select Date</string>
    <string name="select_meal_time">Select meal time</string>
    <string name="please_select_meal_date_and_time">Please select meal date and time</string>
    <string name="recipe_detail_info">Cooking time: &lt;b>%smin&lt;/b> | Portion: &lt;b>%s serving&lt;/b> | Level: &lt;b>%s&lt;/b></string>
    <string name="recipe_by">recipe by</string>

    <string name="add_comment">Add comment</string>

    <string name="checkout">Checkout</string>

    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>

    <string name="address_detail">Address Detail</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="notes_for_driver">Notes for driver</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="ok">Ok</string>
    <string name="thank_you_for_your_purchase">Thank You For Your Purchase</string>

    <string name="meal_plan">Meal Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>

    <string name="you_have_no_order_history">You have no order history</string>
    <string name="no_order_history_shop_now">Shop Now</string>

    <string name="liked_recipes">Liked Recipes</string>
    <string name="cooked_recipes">Cooked Recipes</string>
    <string name="news_feed">News Feed</string>
    <string name="recipe_by_me">Recipe by Me</string>

    <string name="recipe_by_user">Recipe by %s</string>
    
    <string name="recipes">Recipes</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    
    <string name="edit_profile">Edit Profile</string>
    <string name="headline">Headline</string>

    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="meal_plan_note">* Perencanaan makanan yang telah dibuat akan direset setiap hari Minggu tukul 19.00 WIB.</string>

    <string name="please_choose_location">Please choose your location</string>

    <string name="please_enter_phone_number">Please enter phone number</string>
</resources>
