<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_thanks"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_driver"
            android:layout_width="125dp"
            android:layout_height="125dp"
            tools:src="@mipmap/ic_home"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Driver Abcde"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_rate"
            android:layout_gravity="center_horizontal"/>

        <RatingBar
            android:id="@+id/rb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_feedback"/>

        <EditText
            android:id="@+id/et_review"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:background="@drawable/bg_border_radius"
            android:textCursorDrawable="@null"
            android:padding="8dp"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:text="@string/submit"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />
</LinearLayout>