<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="login"
            type="com.dailiv.internal.data.local.binding.LoginBinding"/>
        <variable
            name="presenter"
            type="com.dailiv.view.login.LoginPresenter"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.TextInputLayout
            style="@style/AppTheme.WhiteTextInputLayoutHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/AppTheme.WhiteTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="fonts/Roboto-Regular.ttf"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={login.email}"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/bg_white_cursor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/AppTheme.WhiteTextInputLayoutHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/AppTheme.WhiteTextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="fonts/Roboto-Regular.ttf"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={login.password}"
                android:textColor="@color/white"
                android:textColorHint="@color/red"
                android:textCursorDrawable="@drawable/bg_white_cursor"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/btn_red"
            android:onClick="@{() -> presenter.doLogin(login)}"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_register"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/sign_up"
                android:onClick="@{() -> presenter.goToRegister()}"
                />
        </LinearLayout>
    </LinearLayout>
</layout>
