<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_order_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/red">

        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_order_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Toolbar"
                app:title="@string/order_history"
                app:titleTextAppearance="@style/AppTheme.ToolbarTitle">

            </android.support.v7.widget.Toolbar>

        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_below="@+id/abl_order_history">

        <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:paddingBottom="16dp"
            android:background="@drawable/bg_border_bottom">

            <TextView
                android:layout_alignParentStart="true"
                android:id="@+id/tv_address_header"
                app:layout_widthPercent="40%"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                >
            </TextView>

            <me.grantland.widget.AutofitTextView
                android:layout_toEndOf="@+id/tv_address_header"
                android:id="@+id/tv_date_header"
                app:layout_widthPercent="20%"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/date"
                android:textStyle="bold"
                >

            </me.grantland.widget.AutofitTextView>

            <me.grantland.widget.AutofitTextView
                android:layout_toEndOf="@+id/tv_date_header"
                android:id="@+id/tv_amount_header"
                app:layout_widthPercent="20%"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/amount"
                android:textStyle="bold"
                >

            </me.grantland.widget.AutofitTextView>

            <me.grantland.widget.AutofitTextView
                android:layout_toEndOf="@+id/tv_amount_header"
                android:id="@+id/tv_status_header"
                app:layout_widthPercent="20%"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/status"
                android:textStyle="bold"
                >

            </me.grantland.widget.AutofitTextView>

        </android.support.percent.PercentRelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_order_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</RelativeLayout>