<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_alignParentTop="true"
    android:id="@+id/ll_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:background="@drawable/bg_border_bottom"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_alignParentStart="true"
            android:id="@+id/civ_user_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"/>

        <LinearLayout
            android:layout_toEndOf="@+id/civ_user_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"
                />

            <TextView
                android:id="@+id/tv_user_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"/>

            <Button
                android:visibility="gone"
                android:id="@+id/btn_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:background="@drawable/btn_white"
                android:minHeight="24dp"
                android:textAllCaps="false"
                android:text="@string/edit_profile"
                />

            <LinearLayout
                android:id="@+id/ll_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_red"
                    android:minHeight="24dp"
                    android:textAllCaps="false"
                    android:text="@string/follow"
                    />

                <Button
                    android:id="@+id/btn_unfollow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:background="@drawable/btn_white"
                    android:minHeight="24dp"
                    android:textAllCaps="false"
                    android:text="@string/unfollow"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_alignParentStart="true"
            app:layout_widthPercent="33%"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_num_of_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipes"/>

        </LinearLayout>

        <LinearLayout
            android:layout_centerHorizontal="true"
            app:layout_widthPercent="33%"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_left_right"
            android:padding="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_num_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"/>

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentEnd="true"
            app:layout_widthPercent="33%"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_num_of_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"/>

        </LinearLayout>


    </android.support.percent.PercentRelativeLayout>

</LinearLayout>