<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@drawable/bg_border_bottom">

            <ImageView
                android:id="@+id/iv_location"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:layout_centerVertical="true"
                android:padding="4dp"
                android:tint="@color/red"/>

            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/iv_location"
                app:layout_widthPercent="65%"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address">
                </TextView>

                <TextView
                    android:id="@+id/tv_current_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />
            </LinearLayout>

            <Button
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/btn_change_location"
                app:layout_widthPercent="20%"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_white"
                android:textColor="@color/red"
                android:textAllCaps="false"
                android:minHeight="30dp"
                android:text="@string/change">
            </Button>

        </android.support.percent.PercentRelativeLayout>

        <LinearLayout
            android:id="@+id/ll_recipe_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_of_the_day"/>

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_popular_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_this_week"/>

                <TextView
                    android:id="@+id/tv_recipes"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all_recipes"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_this_week"/>

                <TextView
                    android:id="@+id/tv_looking_for_ingredients"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/looking_for_ingredient"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>